crates/check_cli/tests/snapshots/main_cases_assist/assist_emit_diagnostic_and_blocks.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "assist": {
    "enabled": true,
    "actions": {
      "source": {
        "useSortedKeys": "on"
      }
    }
  },
  "formatter": { "enabled": false }
}
```

## `file.json`

```json
{ "zod": true, "lorem": "ipsum", "foo": "bar" }
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.json:1:1 assist/source/useSortedKeys  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The members are not sorted by key.
  
  > 1 │ { "zod": true, "lorem": "ipsum", "foo": "bar" }
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
  i Safe fix: Sort the members by key.
  
  - {·"zod":·true,·"lorem":·"ipsum",·"foo":·"bar"·}
  + {·"foo":·"bar","lorem":·"ipsum",·"zod":·true·}
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
