crates/check_cli/tests/snapshots/main_cases_assist/assist_writes.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "assist": {
    "enabled": true,
    "actions": {
      "source": {
        "useSortedKeys": "on"
      }
    }
  },
  "formatter": { "enabled": false }
}
```

## `file.json`

```json
{ "foo": "bar","lorem": "ipsum", "zod": true }
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
